// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DatasetInfo correctly 1`] = `
<section>
  <div
    className="row fdk-row"
  >
    <div
      className="p-0 col-lg-4"
    >
      <div
        className="fdk-container-detail"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-upload"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <h5>
            Issue date
          </h5>
          <p
            className="fdk-ingress mb-0 text-nowrap"
          >
            <t
              ago={false}
              calendar={false}
              decimal={false}
              element="time"
              filter={[Function]}
              format="DD.MM.YYYY"
              fromNow={false}
              interval={60000}
              onChange={[Function]}
              toNow={false}
              unit={null}
              unix={false}
              utc={false}
            >
              2018-04-26T00:00:00+0200
            </t>
          </p>
        </div>
      </div>
    </div>
    <div
      className="p-0 col-lg-8"
    >
      <div
        className="fdk-container-detail"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-refresh"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <h5>
            Update frequency
          </h5>
          <p
            className="fdk-ingress mb-0"
          >
            Å
            rlig
          </p>
        </div>
      </div>
    </div>
    <div
      className="p-0"
    >
      <div
        className="fdk-container-detail"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-user"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <h5>
            Provenance
          </h5>
          <p
            className="fdk-ingress mb-0"
          >
            Vedtak
          </p>
        </div>
      </div>
    </div>
    <div
      className="p-0"
    >
      <div
        className="fdk-container-detail"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-certificate"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <h5>
            Currentness
          </h5>
          <p
            className="fdk-ingress mb-0"
          >
            Denne teksten sier noe om aktualiteten. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
          </p>
        </div>
      </div>
    </div>
    <div
      className="col-md-12 p-0"
    >
      <div
        className="fdk-container-detail"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-map"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <h5>
            Spatial
          </h5>
          <p
            className="fdk-ingress mb-0"
          >
            <span
              className="fdk-ingress mb-0"
              key="dataset-info-spatial-0"
            >
              Asker
            </span>
            <span
              className="fdk-ingress mb-0"
              key="dataset-info-spatial-1"
            >
              , Bærum
            </span>
            <span
              className="fdk-ingress mb-0"
              key="dataset-info-spatial-2"
            >
              , Hurum
            </span>
            <span
              className="fdk-ingress mb-0"
              key="dataset-info-spatial-3"
            >
              , Røyken
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row fdk-row row-eq-height"
  >
    <div
      className="col-12 p-0"
    >
      <div
        className="fdk-container-detail col-12"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-flag"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <h5>
            Language
          </h5>
          <p
            className="fdk-ingress mb-0"
            key="dataset-info-language-0"
          >
            Norsk
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row fdk-row"
  >
    <div
      className="col-12 p-0"
    >
      <div
        className="fdk-container-detail"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-link"
          />
        </div>
        <div
          className="fdk-detail-text refer"
          key="dataset-reference-0"
        >
          <h5>
            Har versjon
          </h5>
          <p
            className="fdk-ingress"
          >
            <a
              href="http://referenced/dataset"
            >
              Relation
              <i
                className="fa fa-external-link fdk-fa-right"
              />
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`should render DatasetInfo correctly 2`] = `
<section>
  <div
    className="row fdk-row"
  >
    <div
      className="p-0 col-lg-4"
    >
      <div
        className="fdk-container-detail"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-upload"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <h5>
            Issue date
          </h5>
          <p
            className="fdk-ingress mb-0 text-nowrap"
          >
            <t
              ago={false}
              calendar={false}
              decimal={false}
              element="time"
              filter={[Function]}
              format="DD.MM.YYYY"
              fromNow={false}
              interval={60000}
              onChange={[Function]}
              toNow={false}
              unit={null}
              unix={false}
              utc={false}
            >
              2018-04-26T00:00:00+0200
            </t>
          </p>
        </div>
      </div>
    </div>
    <div
      className="p-0 col-lg-8"
    >
      <div
        className="fdk-container-detail"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-refresh"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <h5>
            Update frequency
          </h5>
          <p
            className="fdk-ingress mb-0"
          >
            Å
            rlig
          </p>
        </div>
      </div>
    </div>
    <div
      className="p-0"
    >
      <div
        className="fdk-container-detail"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-user"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <h5>
            Provenance
          </h5>
          <p
            className="fdk-ingress mb-0"
          >
            Vedtak
          </p>
        </div>
      </div>
    </div>
    <div
      className="p-0"
    >
      <div
        className="fdk-container-detail"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-certificate"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <h5>
            Currentness
          </h5>
          <p
            className="fdk-ingress mb-0"
          >
            Denne teksten sier noe om aktualiteten. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
          </p>
        </div>
      </div>
    </div>
    <div
      className="col-md-12 p-0"
    >
      <div
        className="fdk-container-detail"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-map"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <h5>
            Spatial
          </h5>
          <p
            className="fdk-ingress mb-0"
          >
            <span
              className="fdk-ingress mb-0"
              key="dataset-info-spatial-0"
            >
              Asker
            </span>
            <span
              className="fdk-ingress mb-0"
              key="dataset-info-spatial-1"
            >
              , Bærum
            </span>
            <span
              className="fdk-ingress mb-0"
              key="dataset-info-spatial-2"
            >
              , Hurum
            </span>
            <span
              className="fdk-ingress mb-0"
              key="dataset-info-spatial-3"
            >
              , Røyken
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row fdk-row row-eq-height"
  >
    <div
      className="col-12 p-0"
    >
      <div
        className="fdk-container-detail col-lg-8"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-calendar"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <div
            className="clearfix mb-1-em"
            key="dataset-info-temporal-0"
          >
            <div
              className="col-12 col-lg-6 dataset-temporal-date"
            >
              <h5>
                From
              </h5>
              <p
                className="fdk-ingress mb-0 text-nowrap"
              >
                <t
                  ago={false}
                  calendar={false}
                  decimal={false}
                  element="time"
                  filter={[Function]}
                  format="DD.MM.YYYY"
                  fromNow={false}
                  interval={60000}
                  onChange={[Function]}
                  toNow={false}
                  unit={null}
                  unix={false}
                  utc={false}
                >
                  1483228800000
                </t>
              </p>
            </div>
            <div
              className="col-12 col-lg-6 dataset-temporal-date"
            >
              <h5>
                To
              </h5>
              <p
                className="fdk-ingress mb-0 text-nowrap"
              >
                <t
                  ago={false}
                  calendar={false}
                  decimal={false}
                  element="time"
                  filter={[Function]}
                  format="DD.MM.YYYY"
                  fromNow={false}
                  interval={60000}
                  onChange={[Function]}
                  toNow={false}
                  unit={null}
                  unix={false}
                  utc={false}
                >
                  1514764799000
                </t>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fdk-container-detail col-12 col-lg-4"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-flag"
          />
        </div>
        <div
          className="fdk-detail-text"
        >
          <h5>
            Language
          </h5>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row fdk-row"
  >
    <div
      className="col-12 p-0"
    >
      <div
        className="fdk-container-detail"
      >
        <div
          className="fdk-detail-icon"
        >
          <i
            className="fa fa-link"
          />
        </div>
        <div
          className="fdk-detail-text refer"
          key="dataset-reference-0"
        >
          <h5>
            Har versjon
          </h5>
          <p
            className="fdk-ingress"
          >
            <a
              href="http://referenced/dataset"
            >
              Relation
              <i
                className="fa fa-external-link fdk-fa-right"
              />
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`should render DatasetInfo correctly with no props 1`] = `
<section>
  <div
    className="row fdk-row"
  />
  <div
    className="row fdk-row row-eq-height"
  >
    <div
      className="col-12 p-0"
    />
  </div>
  <div
    className="row fdk-row"
  />
</section>
`;
